# gr-scopy

./: CMakeLists.txt  MANIFEST.md  README.md  gnuradio-scopy.pc.in
apps/: CMakeLists.txt
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  gnuradio-scopyConfig.cmake  scopyConfig.cmake
docs/: CMakeLists.txt  README.scopy
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
grc/: CMakeLists.txt  scopy_goertzel_scopy_fc.block.yml  scopy_t_source.block.yml
include/scopy/: CMakeLists.txt  goertzel_scopy.h  math.h  (+5 more)
lib/: CMakeLists.txt  goertzel_scopy.cc  goertzel_scopy_fc_impl.cc  goertzel_scopy_fc_impl.h  iio_math_gen_impl.cc  iio_math_impl.cc  iio_math_impl.h  iio_math_lexer.l  iio_modulo_const_ff_impl.cc  iio_modulo_const_ff_impl.h  iio_modulo_ff_impl.cc  iio_modulo_ff_impl.h  iio_power_ff_impl.cc  iio_power_ff_impl.h  modulo_const_ff_impl.cc  modulo_const_ff_impl.h  modulo_ff_impl.cc  modulo_ff_impl.h  power_ff_impl.cc  power_ff_impl.h  qa_scopy.cc  qa_scopy.h  t_source_impl.cc  t_source_impl.h  test_scopy.cc  trapezoidal_impl.cc  trapezoidal_impl.h
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py
python/scopy/bindings/: CMakeLists.txt  goertzel_scopy_fc_python.cc  modulo_const_ff_python.cc  modulo_ff_python.cc  power_ff_python.cc  python_bindings.cc  t_source_python.cc  trapezoidal_python.cc
python/scopy/bindings/docstrings/: goertzel_scopy_fc_pydoc_template.h  modulo_const_ff_pydoc_template.h  modulo_ff_pydoc_template.h  power_ff_pydoc_template.h  t_source_pydoc_template.h  trapezoidal_pydoc_template.h
swig/: CMakeLists.txt  scopy_swig.i
(+18 files in other folders)
